--- a/public/back/login.html
+++ b/public/back/login.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>登录页</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/common.css"/>
 </head>
-<body>
-111
+<body class="body_bg">
+
+
 
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="js/common.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
