--- a/public/back/index.html
+++ b/public/back/index.html
@@ -2,9 +2,74 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>登录页</title>
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css"/>
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css"/>
+    <link rel="stylesheet" href="css/common.css"/>
+    <style>
+
+    </style>
 </head>
 <body>
-111
+<!--侧边栏-->
+<div class="lt_aside">
+    <div class="brand">
+        <a href="index.html">黑马18期</a>
+    </div>
+    <div class="user">
+        <img src="./images/default.jpg" alt=""/>
+        <p>超级管理员</p>
+    </div>
+    <div class="nav">
+        <ul class="" >
+            <li>
+                <!--应该创建一个嵌套的 <span> 标签，并将图标类应用到这个 <span> 标签上-->
+                <a href="user.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a>
+            </li>
+            <li >
+                <a href="javascript:;" class="now">
+                    <span class="glyphicon glyphicon-user"></span>
+                    分类管理
+                </a>
+                <div class="second" style="display: none">
+                    <a href="first.html">一级分类</a>
+                    <a href="second.html">二级分类</a>
+                </div>
+            </li>
+            <li><a href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
+        </ul>
+    </div>
+
+</div>
+<!--主体区-->
+<div class="lt_main">
+    <div class="lt_header">
+        <a href="javascript:;" class="pull-left icon_menu"><span class="glyphicon glyphicon-align-justify"></span></a>
+        <a href="javascript:;" class="pull-right icon_logout"><span class="glyphicon glyphicon-share"></span></a>
+    </div>
+<!--有个整体的padding-->
+    <div class="container-fluid">
+        <!--路径导航-->
+        <ol class="breadcrumb">
+            <li><a href="#">管理系统</a></li>
+            <li class="active">首页</li>
+        </ol>
+
+        <!--内容-->
+        <div class="lt_container">
+
+        </div>
+    </div>
+
+</div>
+
+<script src="lib/jquery/jquery.min.js"></script>
+<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+<!--表单校验插件-->
+<script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="./lib/nprogress/nprogress.js"></script>
+<script src="js/common.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
