--- a/public/back/first.html
+++ b/public/back/first.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>登录页</title>
+    <title>一级分类</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css"/>
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css"/>
@@ -28,13 +28,13 @@
                 <a href="user.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a>
             </li>
             <li >
-                <a href="javascript:;" class="now">
+                <a href="javascript:;">
                     <span class="glyphicon glyphicon-user"></span>
                     分类管理
                 </a>
-                <div class="second" style="display: none">
-                    <a href="first.html">一级分类</a>
-                    <a href="second.html">二级分类</a>
+                <div class="second" style="display: block">
+                    <a href="first.html"  class="now">一级分类</a>
+
                 </div>
             </li>
             <li><a href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
@@ -53,40 +53,32 @@
         <!--路径导航-->
         <ol class="breadcrumb">
             <li><a href="#">管理系统</a></li>
-            <li class="active">首页</li>
+            <li class="active"></li>
         </ol>
 
         <!--内容-->
-        <div class="lt_container">
+        <div class="lt_content">
+            <button  class="btn btn-default btn_add mb_20">添加分类</button>
             <table class="table table-bordered table-hover">
                 <!--全局css -表格-鼠标悬停会有灰色背景的效果 鼠标悬停与条纹状表格（隔行变色）两个选择一个-->
                 <thead>
                     <tr>
-                        <th width="10%">序号</th>
+                        <th width="20%">序号</th>
                         <!--设置宽度的大小 用width10%即可 td会跟着标头的th跑-->
-                        <th width="30%">用户名</th>
-                        <th width="30%">手机号</th>
-                        <th width="20%">状态</th>
-                        <th width="10%">操作</th>
+                        <th width="80%">分类名称</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!--<tr>-->
-                        <!--<td>1</td>-->
-                        <!--<td>itcast</td>-->
-                        <!--<td>15102324243</td>-->
-                        <!--<td>正常</td>-->
-                        <!--<td>-->
-                            <!--<button class="btn btn-success btn-sm">启用</button>-->
-                            <!--<button class="btn btn-danger btn-sm">禁用</button>-->
-                        <!--</td>-->
-                    <!--</tr>-->
+                    <tr>
+                        <td>1</td>
+                        <td>户外馆</td>
+                    </tr>
                 </tbody>
             </table>
-        <!--分页标签，只要一个ul，指定id*****-->
+            <!--分页标签，只要一个ul，指定id*****-->
             <div class="text-right">
                 <!--***插件会把加载分页ul自动被设置成inline-block身上的**右对齐**干掉 办法是再加一个盒子-->
-                <ul id="pagination" >
+                <ul id="paginator" >
 
                 </ul>
             </div>
@@ -96,7 +88,7 @@
     </div>
 
 </div>
-
+<!--登录模态框-->
 <div class="modal fade" tabindex="-1" id="userModal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -113,33 +105,49 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 <button type="button" class="btn btn-primary btn_confirm ">确定</button>
-           <!--自定义的类最好用下划线 因为插件中的类是中横线 -->
+                <!--自定义的类最好用下划线 因为插件中的类是中横线 -->
             </div>
         </div>
     </div>
 </div>
-<!--准备模板引擎-->
-<!--i是从0-5的数字-->
-<!--v.id  虽然是1-2-3连续的，但是如果万一删除一条数据，页面上的序号就不连续了，所以用(page-1)*size+i+1-->
+
+<!--添加分类模态框-->
+<div class="modal fade" tabindex="-1" id="firModal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">添加分类</h4>
+            </div>
+            <div class="modal-body">
+                <!--里面是一个表单-->
+                <form id="form">
+                    <div class="form-group">
+                        <!--每个form-group就是一行-->
+                        <input type="text" name="categoryName" class="form-control"  placeholder="请输入一级分类的名称">
+                    </div>
+
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+              <!--H5 form:给input指定form  相当于把两个按钮放在form里面，这里放外面是为了省写样式 也可以吧form范围变大 modal-body这里-->
+                <button type="submit" form="form" class="btn btn-primary btn_add">添加</button>
+                <!--0  自定义的类最好用下划线 因为插件中的类是中横线 -->
+            </div>
+        </div>
+    </div>
+</div>
 <script type="text/template" id="tpl">
     {{ each rows v i}}
     <tr>
         <td>{{(page-1)*size+i+1 }}</td>
-
-        <td>{{v.username}}</td>
-        <td>{{v.mobile}}</td>
-        <td>{{v.isDelete===1?'正常':'禁用'}}</td>
-        <td data-id={{v.id}}>
-            <!--自定义属性-->
-            {{if v.isDelete ===0}}
-            <button class="btn btn-success btn-sm">启用</button>
-            {{else if v.isDelete ===1}}
-            <button class="btn btn-danger btn-sm">禁用</button>
-            {{/if}}
-        </td>
+        <td>{{v.categoryName}}</td>
     </tr>
     {{/each}}
 </script>
+
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <!--表单校验插件-->
@@ -149,6 +157,6 @@
 <script src="./lib/artTemplate/template-web.js"></script>
 <!--引入模板引擎js-->
 <script src="js/common.js"></script>
-<script src="js/user.js"></script>
+<script src="js/first.js"></script>
 </body>
 </html>
