--- a/public/back/second.html
+++ b/public/back/second.html
@@ -133,7 +133,7 @@
                             <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
                                <!--//把这里的文字***写到另一个标签里，否则设置button 的text的时候把字体图标也一起覆盖了-->
                                <span class="dropdown_text">请选择一级分类</span>
-        0                        <span class="caret"></span>
+                               <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
                                 <!--<li><a href="javascript:;">运动馆</a></li>-->
@@ -155,7 +155,8 @@
                         <!--思路：想要button的样式，input:file的功能，就让他们层叠在一起，下一个opacity：0;-->
                         <div class="file_box">
                             <button class="btn btn-default">上传图片</button>
-                            <input type="file" id="iframe-transport" data-url="/category/addSecondCategoryPic" name="pic1"  class="btn btn-default" value="上传图片" multiple/>
+                            <input type="file" id="fileupload" data-url="/category/addSecondCategoryPic"
+                                   name="pic1"  class="btn btn-default" value="上传图片" multiple/>
                             <!--这里注意蹦出来是各种图片，用  ***input：file-->
                             <!--name根据接口文档，id是jquery-fileupload插件要求有一个input的框，id="fileupload" -->
                             <!--data-url指定图片上传时的接口地址 multiple多文件上传-->
@@ -163,8 +164,12 @@
 
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group img_box">
                         <img src="images/none.png" width="100" height="100 " alt=""/>
+                        <input type="hidden" name="brandLogo"/>
+                       <!--存赋值图片地址-->
+                        <input type="hidden" name="hot" value="1"/>
+                        <!--给定一个value-->
                     </div>
                 </form>
 
