--- a/public/back/first.html
+++ b/public/back/first.html
@@ -133,8 +133,8 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
               <!--H5 form:给input指定form  相当于把两个按钮放在form里面，这里放外面是为了省写样式 也可以吧form范围变大 modal-body这里-->
-                <button type="submit" form="form" class="btn btn-primary btn_add">添加</button>
-                <!--0  自定义的类最好用下划线 因为插件中的类是中横线 -->
+                <button type="submit" form="form" class="btn btn-primary ">添加</button>
+                <!--请为button规定type submit 其他浏览器默认有submit功能，但ie浏览器就没有，需要手动添加submit，（这是在外面需要让button有提交表单能力时加）。自定义的类最好用下划线 因为插件中的类是中横线 -->
             </div>
         </div>
     </div>
