--- a/public/front/index.html
+++ b/public/front/index.html
@@ -138,7 +138,7 @@
 <!--尾部-->
     <div class="lt_footer">
         <ul class="clearfix">
-            <li>
+            <li class="now">
                 <a href="index.html">
                     <span class="fa fa-home"></span>
                     <p>首页</p>
