搜索页面详情页静态页面完成

--- a/public/back/product.html
+++ b/public/back/product.html
@@ -34,10 +34,10 @@
                 </a>
                 <div class="second" style="display: none">
                     <a href="first.html"  >一级分类</a>
-                    <a href="second.html"  class="now">二级分类</a>
+                    <a href="second.html"  >二级分类</a>
                 </div>
             </li>
-            <li><a href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
+            <li><a class="now" href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
         </ul>
     </div>
 
