--- a/public/back/second.html
+++ b/public/back/second.html
@@ -54,7 +54,7 @@
         <ol class="breadcrumb">
             <li><a href="#">管理系统</a></li>
             <li><a href="#">分类管理</a></li>
-            <li class="active">一级分类</li>
+            <li class="active" href="second.html">二级分类</li>
         </ol>
 
         <!--内容-->
