--- a/public/back/user.html
+++ b/public/back/user.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>登录页</title>
+    <title>用户管理</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css"/>
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css"/>
@@ -25,10 +25,10 @@
         <ul class="" >
             <li>
                 <!--应该创建一个嵌套的 <span> 标签，并将图标类应用到这个 <span> 标签上-->
-                <a href="user.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a>
+                <a class="now" href="user.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a>
             </li>
             <li >
-                <a href="javascript:;" class="now">
+                <a href="javascript:;" >
                     <span class="glyphicon glyphicon-user"></span>
                     分类管理
                 </a>
@@ -53,7 +53,7 @@
         <!--路径导航-->
         <ol class="breadcrumb">
             <li><a href="#">管理系统</a></li>
-            <li class="active">首页</li>
+            <li class="active">用户管理</li>
         </ol>
 
         <!--内容-->
