--- a/public/back/first.html
+++ b/public/back/first.html
@@ -34,7 +34,7 @@
                 </a>
                 <div class="second" style="display: block">
                     <a href="first.html"  class="now">一级分类</a>
-
+                    <a href="second.html">二级分类</a>
                 </div>
             </li>
             <li><a href="product.html"><span class="glyphicon glyphicon-tags"></span> 商品管理</a></li>
@@ -53,7 +53,8 @@
         <!--路径导航-->
         <ol class="breadcrumb">
             <li><a href="#">管理系统</a></li>
-            <li class="active"></li>
+            <li >分类管理</li>
+            <li class="active" href="first.html">一级分类</li>
         </ol>
 
         <!--内容-->
