--- a/public/back/index.html
+++ b/public/back/index.html
@@ -28,7 +28,7 @@
                 <a href="user.html"><span class="glyphicon glyphicon-user"></span> 用户管理</a>
             </li>
             <li >
-                <a href="javascript:;" class="now">
+                <a href="product.html" >
                     <span class="glyphicon glyphicon-user"></span>
                     分类管理
                 </a>
@@ -58,25 +58,26 @@
 
         <!--内容-->
         <div class="lt_container">
-
+            <div class="echarts1" id="echarts1">11</div>
+            <div class="echarts2 charts_2" id="echarts2">22</div>
         </div>
     </div>
 </div>
 
 <!--模态框-->
-<div class="modal fade" tabindex="-1" >
+<div class="modal fade" id="logoutModal" tabindex="-1" >
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" ><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="modal-title">温馨提示</h4>
             </div>
             <div class="modal-body">
-                <p>One fine body&hellip;</p>
+                <p  class="text-danger"><span class="glyphicon glyphicon-info-sign"></span>您确定要退出后台管理系统吗？</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary btn_logout">退出</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
@@ -87,7 +88,11 @@
 <!--表单校验插件-->
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<!--echarts不依赖任何文件，直接引就可以-->
+<script src="lib/echarts/echarts.min.js"></script>
 <script src="js/common.js"></script>
+
 <script src="js/login.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
